[gd_scene load_steps=27 format=4 uid="uid://jbqiyllin6fo"]

[ext_resource type="Script" uid="uid://bi78ir7fl5s33" path="res://scripts/game.gd" id="1_pe5t1"]
[ext_resource type="AudioStream" uid="uid://ba0nqlvgvulr2" path="res://assets/music/thememusic-nopads-nodrums.ogg" id="2_0s3ox"]
[ext_resource type="AudioStream" uid="uid://cr8rfs3x3d0xt" path="res://assets/music/thememusic-pads-nodrums.ogg" id="3_oif02"]
[ext_resource type="AudioStream" uid="uid://b5a4rxrgujdc4" path="res://assets/music/thememusic-pads-drums.ogg" id="4_y6sut"]
[ext_resource type="AudioStream" uid="uid://dkgxpdhc38pxp" path="res://assets/music/game_over.ogg" id="5_game_over"]
[ext_resource type="PackedScene" uid="uid://dg4ckpkwj010e" path="res://scenes/soul.tscn" id="5_i2ok4"]
[ext_resource type="PackedScene" uid="uid://belo1hglxr1jf" path="res://scenes/door.tscn" id="6_t3uk0"]
[ext_resource type="PackedScene" uid="uid://el1f0wci62nh" path="res://scenes/player.tscn" id="7_iqpg7"]
[ext_resource type="Script" uid="uid://cut65kee22idb" path="res://scripts/player.gd" id="8_cgsjm"]
[ext_resource type="Script" uid="uid://bw40v3cn00c3c" path="res://addons/BulletUpHell/Nodes/BuHPattern.gd" id="9_nrjfr"]
[ext_resource type="Script" uid="uid://bilgoex71iw5j" path="res://addons/BulletUpHell/SpawnPatterns/PatternCircle.gd" id="10_siyaw"]
[ext_resource type="Script" uid="uid://cwpsehqee4x34" path="res://addons/BulletUpHell/SpawnPatterns/PatternOne.gd" id="11_yhpex"]
[ext_resource type="Script" uid="uid://5antba4x85c3" path="res://addons/BulletUpHell/Nodes/BuHBulletProperties.gd" id="12_6ls7d"]
[ext_resource type="Script" uid="uid://b361vvoa60xv5" path="res://addons/BulletUpHell/Bullet/animStates.gd" id="13_2v5tb"]
[ext_resource type="Script" uid="uid://dg6447qwq6owg" path="res://addons/BulletUpHell/Bullet/BulletProps.gd" id="14_rdeo8"]
[ext_resource type="Script" uid="uid://c223f1se5xsvb" path="res://addons/BulletUpHell/Nodes/BuHSpawnPoint.gd" id="15_qii72"]
[ext_resource type="Texture2D" uid="uid://dlpv5opbtuok4" path="res://assets/map/dungeon_tiles.png" id="17_oif02"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6sut"]
texture = ExtResource("17_oif02")
use_texture_padding = false
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -2.6755848, -2.8242283, -8, 8, -8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.3961096, -3.756445, -6.497635, -3.6549196, -8, -8, 8, -8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.3961096, -3.756445, -6.497635, -3.6549196, -8, -8, 8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.3961096, -3.756445, -6.497635, -3.6549196, -8, -8, 8, -8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 2.6755848, -2.8242283, 8, 8, 8, -8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.756445, -6.3961096, -3.6549196, 6.497635, -8, 8, -8, -8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.756445, 6.3961096, 3.6549196, -6.497635, 8, -8, 8, 8)
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.756445, -6.3961096, -3.6549196, 6.497635, -8, 8, -8, -8)
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.756445, 6.3961096, 3.6549196, -6.497635, 8, -8, 8, 8)
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.756445, -6.3961096, -3.6549196, 6.497635, -8, 8, -8, -8)
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.756445, 6.3961096, 3.6549196, -6.497635, 8, -8, 8, 8)
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.8242283, 2.6755848, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.3961096, 3.756445, 6.497635, 3.6549196, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.3961096, 3.756445, 6.497635, 3.6549196, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.3961096, 3.756445, 6.497635, 3.6549196, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 2.6755848, 2.8242283, 8, -8, 8, 8)
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.3503428, -3.0660055, -3.3812025, -3.1980543, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -3.4173155, 8, -3.3503428, 8, -8, -8, -8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, -3.3503428, 3.0660055, -3.3812025, 3.1980543, 8, 8, 8)
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, 3.3503428, -3.0660055, 3.3812025, -3.1980543, -8, -8, -8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3.4173155, 8, 3.3503428, 8, 8, -8, 8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, 3.3503428, 3.0660055, 3.3812025, 3.1980543, -8, 8, -8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_i2ok4"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_y6sut")

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_q0r65"]
stream_count = 3
stream_0/stream = ExtResource("2_0s3ox")
stream_0/volume = 0.0
stream_1/stream = ExtResource("3_oif02")
stream_1/volume = 0.0
stream_2/stream = ExtResource("4_y6sut")
stream_2/volume = 0.0

[sub_resource type="NavigationPolygon" id="PatternCircle"]
resource_name = "PatternCircle"
source_geometry_group_name = &"navigation_polygon_source_group"
script = ExtResource("10_siyaw")
radius = 100
angle_total = 6.28319
bullet = "basic"
nbr = 8
iterations = -1

[sub_resource type="NavigationPolygon" id="PatternOne"]
resource_name = "PatternOne"
source_geometry_group_name = &"navigation_polygon_source_group"
script = ExtResource("11_yhpex")
bullet = "basic"
iterations = -1

[sub_resource type="Curve" id="SpeedCurve"]

[sub_resource type="Curve" id="ScaleCurve"]

[sub_resource type="PackedDataContainer" id="BulletProps"]
script = ExtResource("14_rdeo8")
damage = 1.0
speed = 100.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
spec_bounces = 0
spec_no_collision = false
spec_modulate_loop = 0.0
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_rotating_speed = 0.0
death_after_time = 4.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
a_direction_equation = ""
a_curve_movement = 0
a_speed_multiplier = SubResource("SpeedCurve")
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0.0
homing_time_start = 0.0
homing_duration = 999.0
scale_multi_iterations = 0
scale_multiplier = SubResource("ScaleCurve")
scale_multi_scale = 1.0
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oif02"]
emission_shape_scale = Vector3(25, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(200, 1, 1)
spread = 0.0
initial_velocity_min = 31.01
initial_velocity_max = 31.01
gravity = Vector3(0, 9.8, 0)
linear_accel_min = -2.2351742e-06
linear_accel_max = -2.2351742e-06
color = Color(0.65, 0, 0.021666646, 0.62352943)
turbulence_noise_strength = 5.31
turbulence_noise_scale = 0.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pe5t1")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(77, 69)
tile_map_data = PackedByteArray("AAD7/wQAAQACAAUAAAD8/wUAAQADAAYAAAD9/wUAAQAEAAYAAAD+/wUAAQAFAAYAAAD//wUAAQADAAYAAAAAAAUAAQAEAAYAAAABAAUAAQAFAAYAAAD7/wUAAQACAAYAAAD8/wQAAQAFAAMAAAD9/wQAAQAFAAUAAAD+/wQAAQADAAUAAAD//wQAAQAEAAMAAAAAAAQAAQAFAAQAAAABAAQAAQAEAAUAAAD7/wIAAQACAAMAAAD8/wIAAQADAAUAAAD9/wIAAQAFAAUAAAD+/wIAAQAFAAUAAAD//wIAAQADAAQAAAAAAAIAAQADAAUAAAABAAIAAQAEAAMAAAABAAMAAQAEAAMAAAAAAAMAAQAEAAQAAAD//wMAAQAEAAMAAAD+/wMAAQAEAAUAAAD9/wMAAQAFAAMAAAD8/wMAAQAFAAQAAAD7/wMAAQACAAQAAAD7/wEAAQACAAIAAAD8/wEAAQAEAAIAAAD9/wEAAQAEAAIAAAD+/wEAAQADAAIAAAD//wEAAQAEAAIAAAAAAAEAAQAEAAIAAAABAAEAAQADAAIAAAAFAAMAAQAFAAUAAAACAAQAAQADAAQAAAADAAQAAQAFAAQAAAAEAAQAAQAEAAMAAAAFAAQAAQAEAAQAAAAFAAUAAQAEAAMAAAAEAAUAAQAFAAMAAAAFAAYAAQAFAAQAAAAFAAgAAQAEAAUAAAAFAAcAAQAFAAQAAAAFAAoAAQAFAAMAAAAFAAsAAQAFAAMAAAAGAAoAAQADAAMAAAAGAAkAAQAFAAQAAAAFAAkAAQADAAQAAAAGAAsAAQAGAAMAAAAGAAwAAQAGAAMAAAAFAA0AAQAEAAUAAAAFAAwAAQAFAAMAAAAGAA0AAQAGAAMAAAACAAUAAQADAAYAAAACAAIAAQAEAAMAAAADAAIAAQAEAAMAAAAEAAIAAQAEAAMAAAAFAAIAAQAEAAMAAAACAAMAAQAEAAMAAAADAAMAAQAEAAMAAAAEAAMAAQAEAAMAAAACAAEAAQAEAAIAAAADAAEAAQADAAIAAAAEAAEAAQADAAIAAAAFAAEAAQAFAAIAAAACABEAAQAFAAIAAAABABEAAQAFAAIAAAAAABEAAQAFAAIAAAAFAA4AAQAEAAQAAAAGAA4AAQAGAAMAAAAGAA8AAQAGAAMAAAAGABAAAQAGAAMAAAAFABAAAQAEAAQAAAAEABEAAQAEAAQAAAAFABEAAQAEAAQAAAAFAA8AAQAEAAQAAAAGABEAAQAGAAMAAAAFABIAAQAEAAQAAAAEABIAAQAEAAQAAAADABIAAQAEAAQAAAAGABIAAQAGAAMAAAAGABMAAQAGAAYAAAAFABMAAQAEAAYAAAAEABMAAQAEAAYAAAADABMAAQAFAAYAAAAGAAEAAQAGAAIAAAAGAAIAAQAGAAUAAAAGAAMAAQAGAAMAAAAGAAQAAQAGAAUAAAAGAAUAAQAGAAUAAAAGAAYAAQAGAAQAAAAGAAcAAQAGAAMAAAACABQAAQAGAAMAAAACABMAAQAFAAUAAAACABIAAQAFAAUAAAABABIAAQAFAAUAAAAAABIAAQAFAAUAAAD//xEAAQACAAIAAAD//xIAAQACAAUAAAD//xMAAQACAAUAAAD//xQAAQACAAMAAAAAABMAAQAEAAUAAAABABMAAQAEAAUAAAABABQAAQAEAAUAAAAAABQAAQAEAAUAAAD7/wYAAQAGAAcAAAD8/wYAAQAGAAcAAAD9/wYAAQAGAAcAAAD+/wYAAQAGAAcAAAD//wYAAQAGAAcAAAAAAAYAAQAGAAcAAAABAAYAAQAGAAcAAAACAAYAAQAGAAcAAAAHAAsAAQAGAAcAAAAHAAoAAQAFAAYAAAAHAAkAAQADAAIAAAAIAAkAAQADAAIAAAAJAAkAAQADAAIAAAAKAAkAAQADAAIAAAALAAkAAQADAAIAAAAGAAgAAQAGAAQAAAAMAAkAAQAEAAQAAAAMAAgAAQACAAMAAAAMAAcAAQACAAIAAAANAAYAAQACAAMAAAAMAAoAAQADAAYAAAANAAoAAQADAAYAAAARAAMAAQADAAIAAAASAAMAAQAFAAIAAAATAAMAAQADAAIAAAANAAkAAQAFAAMAAAAOAAcAAQADAAMAAAANAAgAAQAFAAUAAAANAAcAAQAFAAUAAAASAAQAAQADAAQAAAATAAQAAQAFAAMAAAARAAQAAQAEAAQAAAAPAAUAAQAFAAQAAAAOAAYAAQADAAUAAAANAAUAAQACAAIAAAAPAAQAAQADAAIAAAAQAAMAAQACAAIAAAAOAAQAAQAEAAIAAAAOAAUAAQAEAAQAAAAQAAQAAQAFAAQAAAAOAAoAAQAGAAYAAAAOAAkAAQAGAAUAAAAOAAgAAQAGAAUAAAARAAUAAQAFAAYAAAASAAUAAQAEAAYAAAATAAUAAQADAAYAAAAPAAYAAQAGAAQAAAAPAAcAAQAGAAYAAAAQAAUAAQAFAAYAAAAMAAsAAQAGAAcAAAANAAsAAQAGAAcAAAAOAAsAAQAGAAcAAAAPAAgAAQAGAAcAAAAQAAYAAQAGAAcAAAARAAYAAQAGAAcAAAASAAYAAQAGAAcAAAATAAYAAQAGAAcAAAADABQAAQAGAAcAAAAEABQAAQAGAAcAAAAFABQAAQAGAAcAAAAGABQAAQAGAAcAAAAIAAsAAQACAAMAAAAIAAwAAQACAAMAAAAIAA0AAQACAAUAAAAIAA4AAQACAAMAAAAIAA8AAQACAAUAAAAIABAAAQACAAQAAAAIABEAAQACAAMAAAAIAAoAAQAFAAMAAAAJAAoAAQAFAAUAAAAKAAoAAQAFAAMAAAAJAAsAAQAEAAMAAAAJAAwAAQAFAAUAAAAJAA0AAQADAAQAAAAJAA4AAQAFAAMAAAAJAA8AAQADAAUAAAAJABAAAQAEAAQAAAAJABEAAQAFAAQAAAAKAAwAAQAGAAMAAAAKAA0AAQAGAAQAAAAKAA4AAQAGAAMAAAAKAA8AAQAGAAQAAAAKABAAAQAGAAQAAAAKABEAAQAGAAMAAAAKAAsAAQAGAAQAAAALAAoAAQAFAAYAAAALAAsAAQAGAAcAAAADAAUAAQAEAAYAAAAEAAYAAQACAAQAAAAEAAcAAQACAAUAAAAEAAgAAQACAAMAAAAEAAkAAQACAAQAAAAEAAoAAQACAAMAAAAEAAsAAQACAAUAAAAEAAwAAQACAAQAAAAEAA0AAQACAAQAAAAEAA4AAQACAAUAAAAEAA8AAQACAAQAAAAEABAAAQACAAMAAAADABEAAQAEAAIAAAADAAYAAQAGAAcAAAA=")
tile_set = SubResource("TileSet_i2ok4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_q0r65")
volume_db = -5.0

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_game_over")
volume_db = -5.0

[node name="Soul" parent="." instance=ExtResource("5_i2ok4")]
position = Vector2(832, 235)

[node name="Door" parent="." instance=ExtResource("6_t3uk0")]
position = Vector2(88, 459)

[node name="Player" parent="." instance=ExtResource("7_iqpg7")]
position = Vector2(759, 263)
collision_mask = 3
script = ExtResource("8_cgsjm")

[node name="Camera2D" type="Camera2D" parent="Player"]
ignore_rotation = false
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
editor_draw_drag_margin = true

[node name="BulletHellPatterns" type="Node2D" parent="."]

[node name="CirclePattern" type="Path2D" parent="BulletHellPatterns"]
position = Vector2(474, 259)
script = ExtResource("9_nrjfr")
id = "circle"
pattern = SubResource("PatternCircle")

[node name="SinglePattern" type="Path2D" parent="BulletHellPatterns"]
position = Vector2(474, 259)
script = ExtResource("9_nrjfr")
id = "single"
pattern = SubResource("PatternOne")

[node name="BulletProperties" type="Node2D" parent="."]

[node name="BasicBullet" type="Path2D" parent="BulletProperties"]
script = ExtResource("12_6ls7d")
id = "basic"
props = SubResource("BulletProps")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="TopSpawner" type="Node2D" parent="SpawnPoints"]
position = Vector2(474, 100)
script = ExtResource("15_qii72")
active = true
auto_pattern_id = "circle"
shared_area_name = "0"
rotating_speed = 0.5
pool_amount = 50
auto_start_on_cam = true
auto_start_after_time = 1.0
auto_start_at_distance = 5.0
auto_distance_from = NodePath("")
trigger_container = NodePath("")

[node name="LeftSpawner" type="Node2D" parent="SpawnPoints"]
position = Vector2(667, 102)
script = ExtResource("15_qii72")
active = true
auto_pattern_id = "single"
shared_area_name = "0"
rotating_speed = 10.0
pool_amount = 500
auto_start_on_cam = true
auto_start_after_time = 2.0
auto_start_at_distance = 5.0
auto_distance_from = NodePath("")
trigger_container = NodePath("")

[node name="RightSpawner" type="Node2D" parent="SpawnPoints"]
position = Vector2(868, 98)
script = ExtResource("15_qii72")
active = true
auto_pattern_id = "single"
shared_area_name = "0"
rotating_speed = 1111.0
pool_amount = 500
auto_start_on_cam = true
auto_start_after_time = 3.0
auto_start_at_distance = 5.0
auto_distance_from = NodePath("")
trigger_container = NodePath("")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="CanvasLayer"]
position = Vector2(103, -613)
amount = 4000
lifetime = 31.26
speed_scale = 19.85
collision_base_size = 0.0
visibility_rect = Rect2(-100, -100, 10000, 10000)
trail_enabled = true
trail_lifetime = 0.41
process_material = SubResource("ParticleProcessMaterial_oif02")

[node name="SoulStatus" type="Label" parent="CanvasLayer"]
offset_right = 140.0
offset_bottom = 25.0
text = "Soul lost."
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 122.848
grow_vertical = 0
disabled = true
text = "REVIVE"

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -105.0
offset_right = 122.848
offset_bottom = -35.0
grow_vertical = 0
disabled = true
text = "RESET"

[node name="Timer" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Button" to="Player" method="_on_button_pressed"]
